mich 2023 term card

--- a/_posts/2023-09-13-freshers-2023.md
+++ b/_posts/2023-09-13-freshers-2023.md
@@ -21,6 +21,16 @@ header:
 
 [Sign Up for 2023-2024 membership here](https://forms.gle/nwCX9X2jzz9dMpfGA){: .btn .btn--primary .btn--large .align-center}
 
+## Michaelmas 2023 term card
+
+| ------------ | ------------------------------------------------------------------------------------------ |
+| 7th October  | Freshers’ drinks @ Granta, 19:30.                                                          |
+| 21st October | Women’s social with Women’s Rugby Club: touch rugby game followed by food/drink. Time TBC. |
+| 4th November | Novice Comp                                                                                |
+| Week 5 [TBC] | CUPLC hit the climbing wall: Swap with the Mountaineers @Kelsey Kerridge                   |
+| 11th November| CUPLC x CUMC [Mountaineers] TTR @ Sports Centre, 16:00-18:00.                              |
+| 15th November| Social with the Athletics club @Nanna Mex followed by Revs. Time TBC.                      |
+| TBC	       | Club formal.                                                                               |
 
 <figure>
   <img src="{{ image_path }}/leaflet_2023_temp.jpg">
