Change womens social to TBC

--- a/_posts/2023-09-13-freshers-2023.md
+++ b/_posts/2023-09-13-freshers-2023.md
@@ -25,7 +25,7 @@ header:
 
 | ------------ | ------------------------------------------------------------------------------------------ |
 | 7th October  | Freshers’ drinks @ Granta, 19:30.                                                          |
-| 21st October | Women’s social with Women’s Rugby Club: touch rugby game followed by food/drink. Time TBC. |
+| [TBC]        | Women’s social with Women’s Rugby Club: touch rugby game followed by food/drink. Time TBC. |
 | 4th November | Novice Comp                                                                                |
 | Week 5 [TBC] | CUPLC hit the climbing wall: Swap with the Mountaineers @Kelsey Kerridge                   |
 | 11th November| CUPLC x CUMC [Mountaineers] TTR @ Sports Centre, 16:00-18:00.                              |
