Updated leaflet on Freshers post

--- a/_posts/2023-09-13-freshers-2023.md
+++ b/_posts/2023-09-13-freshers-2023.md
@@ -33,5 +33,5 @@ header:
 | TBC	       | Club formal.                                                                               |
 
 <figure>
-  <img src="{{ image_path }}/leaflet_2023_temp.jpg">
+  <img src="{{ image_path }}/leaflet_2023.jpg">
 </figure>
