--- a/_posts/2023-10-09-BUCS-2023.md
+++ b/_posts/2023-10-09-BUCS-2023.md
@@ -16,3 +16,84 @@ header:
 ---
 
 
+The CUPLC presence could be felt at yet another year of BUCS, with members turning up as referees, platform crew,
+table crew, and of course as lifters and handlers.
+
+## Day 1
+
+The first day of BUCS saw the U47, U52, and U57 women take to the platform in the morning, with the U59 and U74 men in the afternoon.
+Vikki Li would be competing in the U52 class, with a personal goal of a 290kg total to achieve a full-blue. Katie O’Flaherty and Anna Clay were nominated
+5th and 2nd in the U57 class respectively, and so were looking to dominate the podium. Yaron had drawn the short straw and
+was tasked with handling two of CUPLC’s most hyper lifters, while CUPLC’s favourite supportive SO Adrian came along to handle Anna.
+
+Vikki went 3 for 3 on squats, with an easy 100kg on her third attempt to hit a 5kg PB despite only doing three sets in
+the warmup room. With Flight A squats complete, it was time for CUPLC’s strong U57s in Flight C to start warming up.
+Now, while many powerlifters claim to lift heavy in order to fight their demons, Katie took things one step further by
+carrying out a full-blown exorcism as she warmed up for squats, contorting her body in ways that no powerlifter ever should.
+
+And yet despite that, Vikki thought it looked fun enough to join in. Katie’s opener moved as expected, but her second
+attempt fell off her back after stepping on the centre spotter’s foot! Fortunately, the jury was in a good mood that
+day and offered Katie an extra attempt, which she absolutely smashed, matching her comp PB. She took a 5kg jump for her
+third attempt, leaving her with a 122.5kg squat and 3 out of 4 successful squats. In the meantime, Anna easily squatted
+a massive 132.5kg on her third attempt, redeeming herself after missing it at Varsity.
+
+![alt text](/assets/images/bucs_2023/vikki_katie.jpg "Katie (top) and Vikki (bottom) competing to see who can fracture their thoracic vertebrae the fastest.")
+
+Next up for the bench press – Vikki quietly built up her total once again going 3 for 3 and achieving a 57.5kg bench.
+
+Katie opened with her previous comp PB, then took a 2.5kg jump to 62.5kg on her second attempt. On her third attempt,
+she managed to press 65kg but not without jumping the command. Anna’s second attempt was a matched comp PB, so she
+added 2.5kg for her third attempt of 72.5kg. After a fight with the bar that the commentators described as “the best
+grind so far”, she was given three white lights and a new personal record!
+
+Finally, the much-anticipated deadlifts. Vikki’s opener flew, so she took a big 10kg jump up to 132.5kg to hit her
+290kg total and get the full-blue. Yaron then submitted a massive 145kg for the third attempt, which would match the
+current BUCS deadlift record and pull Vikki into third place. After Vikki’s secret twin sister, who was also contending
+for third place, missed her final deadlift, Vikki’s final attempt was dropped to a far less terrifying 140kg. She
+stepped onto the platform, hyped up on Christian hymns (not a joke), and pulled the bar with everything she had left.
+The bar moved slowly, but she locked it out – getting two white lights and the third place position! Her joy would be
+short-lived as the jury, who by now seemed to be not having such a good day, decided to overturn her lift, knocking her
+back down to 5th place. Next up would be Katie and Anna. Katie was aiming for third place in the U57s, and her first two
+attempts moved well, with Katie matching her PB with her second pull. Finally, 142.5kg was loaded on the bar, and Katie
+got in the zone with Encanto’s ‘We Don’t Talk About Bruno’ (and frankly, Yaron would have preferred if she didn’t sing
+about Bruno either). As Katie locked out her final deadlift, it occurred to her that she had successfully pulled herself
+into 3rd place! Unfortunately though, the advantage of the deadlift battle was not on her side, and she had to retreat
+to the stands to watch two more lifters attempt to knock her off the podium. The first of them missed her third attempt,
+and for a moment it looked like Katie would keep her spot. However, the second lifter did manage to steal away the
+podium position. Meanwhile, Anna was busy making sure nobody could steal her 2nd place medal (foreshadowing). Her opener
+moved with ease once again, and 10kg was added to the bar for a successful 155kg second attempt. Finally, Anna attempted
+160kg for her third, and the bar crept up her legs in what would be another fantastic fight. However, she locked it out
+so fast that her shoulder rebounded forwards, and the referees penalised her for having a soft lockout. Despite the red
+lights, she finished up in 2nd place.
+
+![alt text](/assets/images/bucs_2023/BUCS_2023_teaser.jpg "Saturday morning gang show off their medals and meaty forearms.")
+
+
+It was therefore a surprise when Katie was given the bronze medal, and Anna was not called up to the podium (due to an
+unfortunate computing error that meant Open lifters were grouped separately from Junior lifters on the scoresheet).
+However, after some excellent negotiating by the CUPLC supporters, Anna was subsequently awarded with her silver medal
+(and Katie quietly left the venue with her accidental bronze).
+
+After all the drama of the morning lifting, Brandon Teh would surely have an easy time in the afternoon… right?
+
+Brandon continues to pretend to be an U74, this time weighing in at a hefty 71.1kg, and was in safe hands with Charlie
+and Vikki sticking around to handle him. His opening squat looked easy, but his quads began to cramp. After applying
+enough Deep Heat to make a dragon sweat, he came out for the second attempt, just 2.5kg below his comp PB. It moved
+slowly, but well enough that he slapped on another 5kg for a big 225kg third attempt despite the other leg now cramping
+up. After what might be the toughest grind of his powerlifting career, Brandon traded his ability to walk for a new
+squat PB. As he crawled off the platform, he could be heard reminding everyone around him for the 47th time that day
+that he wasn’t really even planning to try hard that day, just in case they thought he found that lift heavy.
+
+Bench press went with barely a hitch (other than, you’ve guessed it, more cramping), with Brandon finishing the event
+with three more good lifts and huge 145kg bench press to match his previous personal record.
+
+As Brandon warmed up for deadlifts, he continued to cramp. While his opener moved with lightning speed, he once again
+hobbled off the platform. After a 15kg jump, his second attempt moved similarly well. Brandon sat in 2nd place at this
+point, and for this third attempt took a considerably smaller 7.5kg jump up to 257.5kg to solidify his position on the
+podium. His final pull was just as rapid, and as he walked off the platform, he nearly fell as his legs reminded him once
+again that they don’t work like they used to before.
+
+To everyone’s surprise, Brandon was able to step onto the podium unassisted to receive his silver medal. We can’t wait
+to see what he is able to achieve at Junior Nats in a few weeks! Maybe even a bench press PB… (Brandon would go on to
+win nationals, albeit without a bench press PB).
+
