--- a/_posts/2023-10-09-BUCS-2023.md
+++ b/_posts/2023-10-09-BUCS-2023.md
@@ -97,3 +97,20 @@ To everyone’s surprise, Brandon was able to step onto the podium unassisted to
 to see what he is able to achieve at Junior Nats in a few weeks! Maybe even a bench press PB… (Brandon would go on to
 win nationals, albeit without a bench press PB).
 
+## Day 2
+
+Early on a Sunday morning, two more CUPLC members dragged themselves out of bed to head to Moulton College: Karen Soh, an U63 competitor, and her handler/driver/hype woman Amy Williams. Karen didn’t have the best prep, having to rush it and fit it around a stressful exam. However, this didn’t stop her from starting out the day strong, successfully getting all three squats and a huge 107.5kg, making the third squat move faster than the second! No doubt thanks to the Succession theme song pounding her eardrums (no, I’m still not joking – Cambridge students are a different breed). Following on from squats, Karen’s bench opener of 50kg looked very comfortable. However, the referees that morning had apparently been up all night reading mean tweets about powerlifting referees, and as a result were dealing out some vindictive pauses, leading Karen to unfortunately miss her second and third attempts. Finally, on to the deadlifts, and Karen’s opener was so easy that she took a massive 15kg jump to her second attempt of 125kg, which moved fast off the floor but slowed down a bit at lockout. Finally, Karen took a smaller 7.5kg jump for her third attempt, and while it moved similarly fast off the floor she was unable to lock it out. But she still walked away with a classic 2-red-plate deadlift!
+
+While all this was going on, the U69 women arrived for their afternoon flight. Representing CUPLC was Zara Guppy, a plant-powered plant scientist best known for her ability to grind a lift for over 10 seconds. And former CUPLC member, now representing [redacted], Domiziana Turcatti and her handlers “BUCS legends” Raghul and Suzie.
+
+With Zara in the earlier flight, she was up to squat first. Having recently acquired a coach, Zara was keen to try out her new comp tactics, which included waiting 10 seconds after the start command - no doubt in an attempt to unsettle her competition and throw them off their game. Zara’s first two squats moved very well, and for her final squat of 110kg she tipped forward out of the hole, and for a moment it looked like she’d lose her balance! But Zara was in fact perfectly balanced (as all things should be) and with one hell of a grind managed to good morning the bar back up to the start position to secure three white lights. Following that flight, it was Domiziana’s turn to lift. She was nominated third place and was therefore determined to end up on the podium at the end of the day. Her first two (massive) squats looked identical despite a 7.5kg jump, but given what was on the line she decided to take a conservative 5kg jump to her third squat of 142.5kg. To nobody’s surprise, it moved very easily and she walked off the platform with a comp PB and plenty of energy left in the tank for the rest of the day.
+
+On bench press, Zara mirrored her squat performance by making her first two attempts move easily. As she came out for her third attempt at 70kg, the livestream commentators began to get excited in anticipation of the grind that was about to come. And they were not disappointed. Zara fought with the bar for what felt like an eternity (which, by the way, is not easy to do in the bench press) but once again managed to lock it out for a full complement of white lights. Keen to not be overshadowed by an actual Cambridge student, Domiziana returned to the platform in the next flight for her bench press. Just like Zara, her first two attempts moved very comfortably, and she took a small 2.5kg jump to 77.5kg for her final attempt. She looked very focused as she approached the platform and set up for the lift, and the attempt moved exactly like a third attempt should, securing Domiziana yet another good lift and yet another PB! Things seemed auspicious as she entered the deadlifts still nominated in third place.
+
+![alt text](/assets/images/bucs_2023/zara.jpg "Edgy powerlifters often claim to “disable gravity” when they lift (which would be cheating if true). Zara is actually capable of turning off gravity, but she usually saves this for after the lift to make her hair look cool for photos.")
+
+But first up to pull would be Zara. Her first attempt moved well, but her second attempt of 150kg got a little stuck at the lockout. However, by this point it should be clear that you should never bet against Zara. So, as she walked onto the platform for her final massive grind of the day, waiting for her was 160kg – potentially a new PB. The bar moved rapidly off the floor but once again got stuck at lockout, and the entire audience was screaming at her for a full ten seconds (not even an exaggeration) as she fought to get the bar that last inch or two up her thighs. After showing a room full of seasoned powerlifters the best fight they’ve seen in their entire careers, Zara gave up and dropped the bar. Time stopped for a moment as she took a couple of steps back. Nobody was sure if she was even still conscious at this point, but as the spotters rushed in to catch her they realised the only thing she needed them to lift up were her feels. Zara may not have got her deadlift PB, but she left the platform as the crowd favourite and a newly-crowned monarch – “Queen of the Grind”.
+
+However, the excitement was far from over. Domiziana was up to secure her podium spot, and things looked good as she stepped out to take the last opener of her flight, making light work of her first attempt. Her second attempt was similarly easy, and her prospects continued to appear bright. Despite sandbagging her second, she only took a 7.5kg jump up to 180kg for her final attempt; a pull for third place. While it slowed down at lockout, it moved far easier than a third attempt ever should. At this point, Domiziana had a 400kg total and third place under her belt with only two lifters left to follow: one who was already in second place, and the person in fourth place who appeared to be pulling for a deadlift record but would not surpass her for the podium spot. However, Domiziana’s seat was about to be challenged as the fourth place forecast upped her attempt selection to everyone’s surprise, looking to not only demolish the deadlift record but also to pull ahead of Domiziana! Her and Suzie could be seen watching from the sidelines as the final puller of the flight put in the grind of her life – albeit with a little bit of downward movement. Domiziana looked on with a mix of emotions as her rival was awarded two white lights – disappointment at ending up in fourth place despite achieving a total that would have won the previous year, but disbelief and awe at what her competition had done just to be able to beat her (Domiziana would then go on to wipe the floor with this rival at the Manchester Open a few months later).
+
+![alt text](/assets/images/bucs_2023/domiziana.jpg "Domiziana and Zara train together, live together, eat together, laugh together, and cry together. It is therefore no surprise that Domiziana is also capable of disabling gravity, yet also reserves this ability for post-lift celebrations. ")
