--- a/_posts/2023-10-09-BUCS-2023.md
+++ b/_posts/2023-10-09-BUCS-2023.md
@@ -114,3 +114,26 @@ But first up to pull would be Zara. Her first attempt moved well, but her second
 However, the excitement was far from over. Domiziana was up to secure her podium spot, and things looked good as she stepped out to take the last opener of her flight, making light work of her first attempt. Her second attempt was similarly easy, and her prospects continued to appear bright. Despite sandbagging her second, she only took a 7.5kg jump up to 180kg for her final attempt; a pull for third place. While it slowed down at lockout, it moved far easier than a third attempt ever should. At this point, Domiziana had a 400kg total and third place under her belt with only two lifters left to follow: one who was already in second place, and the person in fourth place who appeared to be pulling for a deadlift record but would not surpass her for the podium spot. However, Domiziana’s seat was about to be challenged as the fourth place forecast upped her attempt selection to everyone’s surprise, looking to not only demolish the deadlift record but also to pull ahead of Domiziana! Her and Suzie could be seen watching from the sidelines as the final puller of the flight put in the grind of her life – albeit with a little bit of downward movement. Domiziana looked on with a mix of emotions as her rival was awarded two white lights – disappointment at ending up in fourth place despite achieving a total that would have won the previous year, but disbelief and awe at what her competition had done just to be able to beat her (Domiziana would then go on to wipe the floor with this rival at the Manchester Open a few months later).
 
 ![alt text](/assets/images/bucs_2023/domiziana.jpg "Domiziana and Zara train together, live together, eat together, laugh together, and cry together. It is therefore no surprise that Domiziana is also capable of disabling gravity, yet also reserves this ability for post-lift celebrations. ")
+
+
+## Day 3
+
+On the afternoon of day 3 of BUCS, the U76 women were competing. Among them, Cambridge’s own Emma Onah. She came into her first national competition with personal targets in mind. And after her first two squats moved easily, she loaded up 130kg on the bar and squatted it so fast that she left the platform in disbelief! With one personal goal (and personal record) out the way, Emma returned to the platform for bench press and made 60kg fly off her chest on her second attempt. However, after a further 5kg jump for her third attempt, she got stuck in the midrange and unfortunately got her first failed lift of the day. Finally, the turn of the deadlifts. Emma had a massive third attempt of 160kg planned for the day, and in fact she even had the biggest opener of her flight! She then took a 7.5kg jump up to 157.5kg, and while it moved fast off the floor it did slow down at the lockout. Unperturbed, she loaded up 162.5kg for her final lift of the day – in excess of her own target! Once again, she ripped the bar off the floor, but this time the lockout proved too tough and she was unable to complete the lift. 
+
+Despite the fact that most of the lifters had been complete strangers at the start of the day, the atmosphere was extremely supportive and congratulatory at the medals ceremony. Emma felt touched by the camaraderie that is characteristic of this sport, further reminding her why she loves it so much.
+
+## Day 4
+The fourth day of BUCS saw only the U93 men competing. CUPLC had no lifters that day. But there were several reports of a ghostly sad-looking man at the venue walking around eating carrots with his singlet pulled down to his waist. Although nobody ever saw such a man on the platform.
+
+## Day 5
+The final day of BUCS saw the clash of the titans, with the U105 men competing in the morning followed by the U84 and 84+ women and the U120 and 120+ men in the afternoon. Representing Cambridge were Ada Adamczyk and Jasmine Mack in the U84s, with Zara and Jane tagging along to handle Ada. Drama started early, with both lifters missing weigh ins due to Yaron’s slow driving (and possibly also other factors), but the referees were feeling generous that day and let them weigh in before the men anyway. Their troubles were not over though! While Ada weighed in successfully and immediately went to town on a bottle of water, Jasmine was still too heavy and had to spend the next 30 minutes spitting into a cup. Finally, after a tense waiting period during which Jasmine nearly purchased a pack of leeches off Amazon, she weighed in again and was exactly 84.0. Jasmine and Ada were nominated 3rd and 5th respectively, but the 2nd place nominee didn’t turn up, leaving the podium positions open. 
+
+![alt text](/assets/images/bucs_2023/ada_jane.png "Ada makes Jane’s boyfriend jealous.")
+
+In the squats, Ada skipped her way to the platform, hitting three successful lifts and ending up with 145kg (and a 5kg PB). Jasmine’s approach was far more calm, and she squatted 165kg on her third attempt: a massive 20kg PB! On bench press, both lifters managed to press 80kg on their second attempts. Ada took a 2.5kg jump for her third attempt, which proved a little too heavy for the day. Jasmine took a 5kg jump for her final bench press after the second attempt flew. While she was able to launch it off her chest, she lost the battle in the midrange and was unable to complete the lift.
+
+![alt text](/assets/images/bucs_2023/jasmine.jpg "Jasmine poses for a photo with the people she’s going to beat next year.")
+
+The final deadlifts of the entire competition started, and this time Jasmine would open before Ada. However, she lost balance on the way up and took a couple of steps backwards, resulting in red lights from the refs. Ada’s totally original deadlift setup allowed her to make light work of her own opener. Second round came around and Jasmine was under pressure to get herself on the board despite taking a 10kg jump - and she did not disappoint, hoisting up the bar as if it was empty and landing herself in 2nd place. Ada skipped onto the platform once again for her second attempt, and once again did not appear to struggle. Finally, in the third round, Jasmine added another 12.5kg onto her second attempt to have a go at pulling 167.5kg, which would pull her into first place. However, she forgot that it was supposed to feel heavy and the barbell flew upwards all the way to lockout, giving BUCS’ calmest lifter a big 12.5kg deadlift PB and a temporary hold on the 1st place spot! After Ada’s easy second attempt, Jane and Zara convinced her to add 7.5kg and go for a big hail Mary third attempt of 170kg. Unfortunately, Ada didn’t know what a hail Mary third attempt was, and proceeded to pull it like it was an opener. After leaving the platform, Ada needed to show off that she had plenty of energy left in the tank, so she picked up Jane and threw her in the air like it was her bat mitzvah. In the end, Jasmine placed 2nd after her main competitor pulled her out of 1st place, and Ada ended up in 4th place just 5kg below the person in 3rd. An incredible performance from both lifters, both of whom still have at least two years left at Cambridge!
+
+![alt text](/assets/images/bucs_2023/flexing.jpg)
