--- a/_posts/2023-10-09-BUCS-2023.md
+++ b/_posts/2023-10-09-BUCS-2023.md
@@ -9,7 +9,7 @@ header:
   overlay_color: "#000"
   overlay_filter: "0.8"
   overlay_image: /assets/images/bucs_2023/BUCS_2023_banner.png
-  caption: "Varsity 2023"
+  caption: "BUCS 2023"
   teaser: /assets/images/bucs_2023/BUCS_2023_teaser.jpg
 
 
