BUCS 2023 author, tags, blues

--- a/_posts/2023-10-09-BUCS-2023.md
+++ b/_posts/2023-10-09-BUCS-2023.md
@@ -1,13 +1,15 @@
 ---
 title: "CUPLC at British University Championships 2023"
 date: 2023-10-09
-author: Sophie Machin
-layout: splash
+author: Yaron Bernstein
 tags:
+  - Meets
+  - BUCS
+  - Meet Reports
 header:
   show_overlay_excerpt: true
   overlay_color: "#000"
-  overlay_filter: "0.8"
+  overlay_filter: "0.5"
   overlay_image: /assets/images/bucs_2023/BUCS_2023_banner.png
   caption: "BUCS 2023"
   teaser: /assets/images/bucs_2023/BUCS_2023_teaser.jpg
@@ -137,3 +139,7 @@ In the squats, Ada skipped her way to the platform, hitting three successful lif
 The final deadlifts of the entire competition started, and this time Jasmine would open before Ada. However, she lost balance on the way up and took a couple of steps backwards, resulting in red lights from the refs. Ada’s totally original deadlift setup allowed her to make light work of her own opener. Second round came around and Jasmine was under pressure to get herself on the board despite taking a 10kg jump - and she did not disappoint, hoisting up the bar as if it was empty and landing herself in 2nd place. Ada skipped onto the platform once again for her second attempt, and once again did not appear to struggle. Finally, in the third round, Jasmine added another 12.5kg onto her second attempt to have a go at pulling 167.5kg, which would pull her into first place. However, she forgot that it was supposed to feel heavy and the barbell flew upwards all the way to lockout, giving BUCS’ calmest lifter a big 12.5kg deadlift PB and a temporary hold on the 1st place spot! After Ada’s easy second attempt, Jane and Zara convinced her to add 7.5kg and go for a big hail Mary third attempt of 170kg. Unfortunately, Ada didn’t know what a hail Mary third attempt was, and proceeded to pull it like it was an opener. After leaving the platform, Ada needed to show off that she had plenty of energy left in the tank, so she picked up Jane and threw her in the air like it was her bat mitzvah. In the end, Jasmine placed 2nd after her main competitor pulled her out of 1st place, and Ada ended up in 4th place just 5kg below the person in 3rd. An incredible performance from both lifters, both of whom still have at least two years left at Cambridge!
 
 ![alt text](/assets/images/bucs_2023/flexing.jpg)
+
+
+## Full Blues:
+* Vikki Li - 52kg - 290kg 
