Add some more blues

--- a/_posts/2023-10-09-BUCS-2023.md
+++ b/_posts/2023-10-09-BUCS-2023.md
@@ -142,4 +142,9 @@ The final deadlifts of the entire competition started, and this time Jasmine wou
 
 
 ## Full Blues:
-* Vikki Li - 52kg - 290kg 
+* Vikki Li - 52kg - 290kg
+* Ada Adamczyk - 84kg -395kg
+* Anna Clay - 57kg - 360kg
+
+## Half Blues:
+* Katie O'Flaherty - 57kg - 327.5kg
