--- a/_posts/2023-10-09-BUCS-2023.md
+++ b/_posts/2023-10-09-BUCS-2023.md
@@ -39,7 +39,7 @@ day and offered Katie an extra attempt, which she absolutely smashed, matching h
 third attempt, leaving her with a 122.5kg squat and 3 out of 4 successful squats. In the meantime, Anna easily squatted
 a massive 132.5kg on her third attempt, redeeming herself after missing it at Varsity.
 
-![alt text](/assets/images/bucs_2023/vikki_katie.jpg "Katie (top) and Vikki (bottom) competing to see who can fracture their thoracic vertebrae the fastest.")
+![alt text](/assets/images/bucs_2023/vikki_katie.jpg "Katie (top) and Vikki (bottom) competing to see who can fracture their thoracic vertebrae the fastest."){: .align-center}
 
 Next up for the bench press – Vikki quietly built up her total once again going 3 for 3 and achieving a 57.5kg bench.
 
@@ -68,7 +68,7 @@ moved with ease once again, and 10kg was added to the bar for a successful 155kg
 so fast that her shoulder rebounded forwards, and the referees penalised her for having a soft lockout. Despite the red
 lights, she finished up in 2nd place.
 
-![alt text](/assets/images/bucs_2023/BUCS_2023_teaser.jpg "Saturday morning gang show off their medals and meaty forearms.")
+![alt text](/assets/images/bucs_2023/BUCS_2023_teaser.jpg "Saturday morning gang show off their medals and meaty forearms."){: .align-center}
 
 
 It was therefore a surprise when Katie was given the bronze medal, and Anna was not called up to the podium (due to an
@@ -109,13 +109,13 @@ With Zara in the earlier flight, she was up to squat first. Having recently acqu
 
 On bench press, Zara mirrored her squat performance by making her first two attempts move easily. As she came out for her third attempt at 70kg, the livestream commentators began to get excited in anticipation of the grind that was about to come. And they were not disappointed. Zara fought with the bar for what felt like an eternity (which, by the way, is not easy to do in the bench press) but once again managed to lock it out for a full complement of white lights. Keen to not be overshadowed by an actual Cambridge student, Domiziana returned to the platform in the next flight for her bench press. Just like Zara, her first two attempts moved very comfortably, and she took a small 2.5kg jump to 77.5kg for her final attempt. She looked very focused as she approached the platform and set up for the lift, and the attempt moved exactly like a third attempt should, securing Domiziana yet another good lift and yet another PB! Things seemed auspicious as she entered the deadlifts still nominated in third place.
 
-![alt text](/assets/images/bucs_2023/zara.jpg "Edgy powerlifters often claim to “disable gravity” when they lift (which would be cheating if true). Zara is actually capable of turning off gravity, but she usually saves this for after the lift to make her hair look cool for photos.")
+![alt text](/assets/images/bucs_2023/zara.jpg "Edgy powerlifters often claim to “disable gravity” when they lift (which would be cheating if true). Zara is actually capable of turning off gravity, but she usually saves this for after the lift to make her hair look cool for photos."){: .align-center}
 
 But first up to pull would be Zara. Her first attempt moved well, but her second attempt of 150kg got a little stuck at the lockout. However, by this point it should be clear that you should never bet against Zara. So, as she walked onto the platform for her final massive grind of the day, waiting for her was 160kg – potentially a new PB. The bar moved rapidly off the floor but once again got stuck at lockout, and the entire audience was screaming at her for a full ten seconds (not even an exaggeration) as she fought to get the bar that last inch or two up her thighs. After showing a room full of seasoned powerlifters the best fight they’ve seen in their entire careers, Zara gave up and dropped the bar. Time stopped for a moment as she took a couple of steps back. Nobody was sure if she was even still conscious at this point, but as the spotters rushed in to catch her they realised the only thing she needed them to lift up were her feels. Zara may not have got her deadlift PB, but she left the platform as the crowd favourite and a newly-crowned monarch – “Queen of the Grind”.
 
 However, the excitement was far from over. Domiziana was up to secure her podium spot, and things looked good as she stepped out to take the last opener of her flight, making light work of her first attempt. Her second attempt was similarly easy, and her prospects continued to appear bright. Despite sandbagging her second, she only took a 7.5kg jump up to 180kg for her final attempt; a pull for third place. While it slowed down at lockout, it moved far easier than a third attempt ever should. At this point, Domiziana had a 400kg total and third place under her belt with only two lifters left to follow: one who was already in second place, and the person in fourth place who appeared to be pulling for a deadlift record but would not surpass her for the podium spot. However, Domiziana’s seat was about to be challenged as the fourth place forecast upped her attempt selection to everyone’s surprise, looking to not only demolish the deadlift record but also to pull ahead of Domiziana! Her and Suzie could be seen watching from the sidelines as the final puller of the flight put in the grind of her life – albeit with a little bit of downward movement. Domiziana looked on with a mix of emotions as her rival was awarded two white lights – disappointment at ending up in fourth place despite achieving a total that would have won the previous year, but disbelief and awe at what her competition had done just to be able to beat her (Domiziana would then go on to wipe the floor with this rival at the Manchester Open a few months later).
 
-![alt text](/assets/images/bucs_2023/domiziana.jpg "Domiziana and Zara train together, live together, eat together, laugh together, and cry together. It is therefore no surprise that Domiziana is also capable of disabling gravity, yet also reserves this ability for post-lift celebrations. ")
+![alt text](/assets/images/bucs_2023/domiziana.jpg "Domiziana and Zara train together, live together, eat together, laugh together, and cry together. It is therefore no surprise that Domiziana is also capable of disabling gravity, yet also reserves this ability for post-lift celebrations. "){: .align-center}
 
 
 ## Day 3
@@ -130,15 +130,15 @@ The fourth day of BUCS saw only the U93 men competing. CUPLC had no lifters that
 ## Day 5
 The final day of BUCS saw the clash of the titans, with the U105 men competing in the morning followed by the U84 and 84+ women and the U120 and 120+ men in the afternoon. Representing Cambridge were Ada Adamczyk and Jasmine Mack in the U84s, with Zara and Jane tagging along to handle Ada. Drama started early, with both lifters missing weigh ins due to Yaron’s slow driving (and possibly also other factors), but the referees were feeling generous that day and let them weigh in before the men anyway. Their troubles were not over though! While Ada weighed in successfully and immediately went to town on a bottle of water, Jasmine was still too heavy and had to spend the next 30 minutes spitting into a cup. Finally, after a tense waiting period during which Jasmine nearly purchased a pack of leeches off Amazon, she weighed in again and was exactly 84.0. Jasmine and Ada were nominated 3rd and 5th respectively, but the 2nd place nominee didn’t turn up, leaving the podium positions open. 
 
-![alt text](/assets/images/bucs_2023/ada_jane.png "Ada makes Jane’s boyfriend jealous.")
+![alt text](/assets/images/bucs_2023/ada_jane.png "Ada makes Jane’s boyfriend jealous."){: .align-center}
 
 In the squats, Ada skipped her way to the platform, hitting three successful lifts and ending up with 145kg (and a 5kg PB). Jasmine’s approach was far more calm, and she squatted 165kg on her third attempt: a massive 20kg PB! On bench press, both lifters managed to press 80kg on their second attempts. Ada took a 2.5kg jump for her third attempt, which proved a little too heavy for the day. Jasmine took a 5kg jump for her final bench press after the second attempt flew. While she was able to launch it off her chest, she lost the battle in the midrange and was unable to complete the lift.
 
-![alt text](/assets/images/bucs_2023/jasmine.jpg "Jasmine poses for a photo with the people she’s going to beat next year.")
+![alt text](/assets/images/bucs_2023/jasmine.jpg "Jasmine poses for a photo with the people she’s going to beat next year."){: .align-center}
 
 The final deadlifts of the entire competition started, and this time Jasmine would open before Ada. However, she lost balance on the way up and took a couple of steps backwards, resulting in red lights from the refs. Ada’s totally original deadlift setup allowed her to make light work of her own opener. Second round came around and Jasmine was under pressure to get herself on the board despite taking a 10kg jump - and she did not disappoint, hoisting up the bar as if it was empty and landing herself in 2nd place. Ada skipped onto the platform once again for her second attempt, and once again did not appear to struggle. Finally, in the third round, Jasmine added another 12.5kg onto her second attempt to have a go at pulling 167.5kg, which would pull her into first place. However, she forgot that it was supposed to feel heavy and the barbell flew upwards all the way to lockout, giving BUCS’ calmest lifter a big 12.5kg deadlift PB and a temporary hold on the 1st place spot! After Ada’s easy second attempt, Jane and Zara convinced her to add 7.5kg and go for a big hail Mary third attempt of 170kg. Unfortunately, Ada didn’t know what a hail Mary third attempt was, and proceeded to pull it like it was an opener. After leaving the platform, Ada needed to show off that she had plenty of energy left in the tank, so she picked up Jane and threw her in the air like it was her bat mitzvah. In the end, Jasmine placed 2nd after her main competitor pulled her out of 1st place, and Ada ended up in 4th place just 5kg below the person in 3rd. An incredible performance from both lifters, both of whom still have at least two years left at Cambridge!
 
-![alt text](/assets/images/bucs_2023/flexing.jpg)
+![alt text](/assets/images/bucs_2023/flexing.jpg){: .align-center}
 
 
 ## Full Blues:
