add rachel as author, add strapline

--- a/_posts/2024-12-09-mens-varsity-2024.md
+++ b/_posts/2024-12-09-mens-varsity-2024.md
@@ -16,7 +16,9 @@ header:
 
 
 ---
----
+
+The men’s varsity team continued their prolific streak by pitting their strongest roster in varsity history against the
+dark blue titans.
 
 The men’s team this year looked the strongest it had ever been, as despite losing long serving CUPLC hall of famer
 Raghul Parthipan, much beloved Osa Iluobe, and big bencha Ollie Little, the team had gained the likes of Isaac Wong,
